--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
 .h5,
 .h6 {
   color: white !important;
+  line-height: 1.5;
 }
 
 body.vcard .section-padding {
@@ -6729,7 +6730,6 @@ footer.clean-footer.crev:before {
 }
 
 .portfolio-carsouel .work-swiper-center .item .img {
-  height: 400px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -10441,4 +10441,8 @@ footer.clean-footer.crev:before {
   100% {
     transform: rotate(0deg);
   }
+}
+
+.portfolio-carsouel  .img img {
+    border-radius: 12px;
 }
